style(base view is modified)

--- a/buscadorReservas/templates/commun/base.html
+++ b/buscadorReservas/templates/commun/base.html
@@ -47,7 +47,7 @@
         <div id="card">
             <a href="{% url 'main' %}">
                 <h2 id="main-title">
-                    Prueba buscador de reservas - Chappsolutions
+                    Buscador de reservas
                 </h2>
             </a>
             {% include "commun/headerbar.html" %}
